# moonmath

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  lighthouserc.json  wrangler.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
content/algorithms/: _index.md
content/algorithms/sorting/: quicksort.md
content/formulas/: _index.md
content/formulas/algebra/: _index.md  quadratic.md
content/formulas/calculus/: _index.md  chain-rule.md
content/formulas/lean4/: _index.md
content/showcase/: _index.md
content/showcase/algebra/: _index.md  am-gm-inequality.md  binomial-theorem.md  cauchy-schwarz.md  geometric-series.md  quadratic.md  vieta-formulas.md
content/showcase/analysis/: _index.md  absolutely-continuous-functions.md  arzela-ascoli.md  baire-category-theorem.md  cauchy-criterion.md  dominated-convergence.md  fatou-lemma.md  fubini-theorem.md  fundamental-theorem-algebra.md  lebesgue-differentiation.md  liouville-theorem.md  monotone-class-theorem.md  monotone-convergence.md  squeeze-theorem.md
content/showcase/calculus/: _index.md  cauchy-mean-value-theorem.md  chain-rule.md  darboux-theorem.md  extreme-value-theorem.md  fundamental-theorem-calculus.md  generalized-mean-value-theorem.md  implicit-function-theorem.md  intermediate-value-theorem.md  inverse-function-theorem.md  lhopitals-rule.md  mean-value-theorem.md  rolle-theorem.md  taylor-theorem.md  weierstrass-approximation.md
content/showcase/category-theory/: _index.md  adjoint-functors.md  functor-composition.md  limits-colimits.md  monad-definition.md  natural-transformation.md  product-coproduct.md  representable-functor.md  yoneda-lemma.md
content/showcase/combinatorics/: _index.md  bell-numbers.md  burnside-counting.md  catalan-numbers.md  chu-vandermonde.md  erdos-ko-rado.md  inclusion-exclusion.md  orbit-counting-applications.md  pascal-identity.md  pigeonhole.md  polya-enumeration.md  ramsey-theorem.md  stirling-approximation.md  stirling-numbers.md  vandermonde-identity.md
content/showcase/complex-analysis/: _index.md  argument-principle.md  cauchy-integral-formula.md  fundamental-theorem-algebra.md  identity-theorem.md  liouville-theorem.md  maximum-modulus.md  morera-theorem.md  open-mapping-complex.md  residue-theorem.md  schwarz-lemma.md
content/showcase/cryptography/: _index.md  diffie-hellman.md  digital-signature.md  elgamal-encryption.md  merkle-tree.md  miller-rabin.md  modular-exponentiation.md  one-way-function.md  rsa-correctness.md
content/showcase/differential-equations/: _index.md  heat-equation-max-principle.md  integrating-factor.md  laplace-equation-mean-value.md  linear-ode-general.md  picard-lindelof.md  variation-of-parameters.md  wave-equation-dalembert.md  wronskian.md
content/showcase/differential-geometry/: _index.md  divergence-theorem.md  exterior-derivative.md  frobenius-theorem-geom.md  gauss-bonnet.md  green-theorem.md  poincare-lemma.md  riemannian-metric.md  stokes-theorem.md
content/showcase/distributed-systems/: _index.md  advance-retreat.md  compact-encoding.md  critical-versions.md  eg-walker-overview.md  event-graph-convergence.md  internal-state-machine.md
content/showcase/field-theory/: _index.md  algebraic-closure.md  finite-fields.md  frobenius-endomorphism.md  normal-extension.md  primitive-element.md  separable-extension.md  splitting-field.md  transcendence-basis.md
content/showcase/fractal-geometry/: _index.md  hausdorff-dimension.md  hausdorff-distance.md  iterated-function-systems.md  koch-snowflake.md  mandelbrot.md  sierpinski-triangle.md
content/showcase/functional-analysis/: _index.md  banach-fixed-point.md  closed-graph.md  hahn-banach.md  open-mapping-theorem.md  riesz-representation.md  spectral-radius.md  stone-weierstrass.md  uniform-boundedness.md
content/showcase/galois-theory/: _index.md  constructible-numbers.md  fundamental-theorem.md  quintic.md
content/showcase/graph-theory/: _index.md  cayley-formula-trees.md  dilworth-theorem.md  euler-planar-formula.md  hall-marriage.md  (+4 more)
crates/moonmath-app/: Cargo.toml
crates/moonmath-app/src/: app.rs  fetch.rs  lib.rs  main.rs  smoke_tests.rs
crates/moonmath-app/src/components/: breadcrumbs.rs  compile_panel.rs  fractal_canvas.rs  ifs_canvas.rs  lean_code_block.rs  math_display.rs  mod.rs  proof_viz.rs  seo.rs
crates/moonmath-app/src/pages/: concepts.rs  home.rs  inspirations.rs  mod.rs  showcase.rs  showcase_category.rs  showcase_detail.rs  showcase_index.rs
crates/moonmath-app/style/: main.css
crates/moonmath-content/: Cargo.toml
crates/moonmath-content/src/: lean_highlight.rs  lib.rs  loader.rs  markdown.rs  render.rs  showcase.rs  taxonomy.rs  wikilinks.rs
crates/moonmath-egui/: Cargo.toml
crates/moonmath-lean/: Cargo.toml
crates/moonmath-lean/src/: compiler.rs  leantex.rs  lib.rs
crates/moonmath-math/: Cargo.toml
crates/moonmath-ssg/: Cargo.toml
crates/moonmath-ssg/src/: main.rs
crates/moonmath-types/: Cargo.toml
crates/moonmath-viz/: Cargo.toml
docs/: deployment.md  lean-service.md
docs/reviews/: wave2-audit.md
lean-project/: lake-manifest.json  lakefile.lean
lean-project/MoonMath/: IFS.lean
scripts/: acceptance.sh  preflight.sh  prerender.sh
scripts/seo/: README.md  package-lock.json  package.json  smoke-urls.json  tsconfig.json
services/lean/: Dockerfile  server.ts
specs/: prd.md  seo.md  wiki-cross-references.md
worker/: package-lock.json  package.json  tsconfig.json
worker/src/: index.ts  lean-compiler.ts
(+169 files in other folders)
