[package]
name = "moonmath-content"
version.workspace = true
edition.workspace = true

[dependencies]
moonmath-types = { path = "../moonmath-types" }
moonmath-math = { path = "../moonmath-math", optional = true }
pulldown-cmark = { workspace = true }
gray_matter = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
math-render = ["dep:moonmath-math"]
